--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2287,6 +2287,11 @@ textarea.form-control {
 }
 
 .btn {
+  border-radius: 2px;
+  font-size: 14px;
+  padding: 7px 14px;
+  outline: none !important;
+  font-family: "Nunito Sans", sans-serif;
   display: inline-block;
   font-weight: 400;
   color: #858796;
@@ -2298,10 +2303,7 @@ textarea.form-control {
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
   line-height: 1.5;
-  border-radius: 0.35rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
@@ -2631,14 +2633,16 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #343C49;
-  border-color: #343C49;
+  color: #007bff;
+  background-color: transparent;
+  background-image: none;
+  border-color: #007bff;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #343C49;
-  border-color: #343C49;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -11237,4 +11241,32 @@ footer.sticky-footer .copyright {
 
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
+}
+
+
+.login-page{
+  padding-bottom: 0;
+  min-height: 100px !important;
+  color: black;
+}
+
+.login-page h5{
+  color: #666f7b;
+  margin: 10px 0;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.2;
+  font-size: 15px !important;
+}
+
+
+.login-logo{
+  font-size: 1.7em;
+  font-weight: bold;
+  line-height: 1.2;
+}
+
+.login-logo:hover{
+  color: #3F6F68;
+  text-decoration: none!important;
 }
